работа с внешнем апи для картинок
